@@ -1,4 +1,3 @@
 * Make test run with DataMapper
 * Add Registerable support
-* Add http authentication support
 * Extract Activatable tests from Confirmable
