@@ -1,3 +1,6 @@
+* enhancements
+  * Added Http Basic Authentication support
+
 == 0.9.2
 
 * bug fix
